--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+  <h1>List of API routes</h1>
+  <ul>
+    <li><a href="/api">/api</a></li>
+    <li><a href="/api/document">/api/document</a></li>
+    <li><a href="/api/params">/api/params</a></li>
+  </ul>
 </body>
 
 </html>
