--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
   <h1>List of API routes</h1>
   <ul>
-    <li><a href="/api">/api</a></li>
-    <li><a href="/api/document">/api/document</a></li>
-    <li><a href="/api/params">/api/params</a></li>
+    <li><a href="/api">GET /api</a></li>
+    <li><a href="/api/document">GET /api/document</a></li>
+    <li><a href="/api/params">GET /api/params</a></li>
+    <li><a href="/api/post">POST /api/post</a></li>
   </ul>
 </body>
 
